--- a/Disp_WinForm/Disp_WinForm.csproj
+++ b/Disp_WinForm/Disp_WinForm.csproj
@@ -41,8 +41,11 @@
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,8 +55,51 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Telerik.WinControls, Version=2018.3.1016.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
+    <Reference Include="Telerik.WinControls.GridView, Version=2018.3.1016.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
+    <Reference Include="Telerik.WinControls.UI, Version=2018.3.1016.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
+    <Reference Include="TelerikCommon, Version=2018.3.1016.40, Culture=neutral, PublicKeyToken=5bb2a467cbec794e" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Activation_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Activation_Form.Designer.cs">
+      <DependentUpon>Activation_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add_alarm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_alarm.Designer.cs">
+      <DependentUpon>Add_alarm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="add_alarm_full.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="add_alarm_full.Designer.cs">
+      <DependentUpon>add_alarm_full.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add_kontakt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_kontakt.Designer.cs">
+      <DependentUpon>Add_kontakt.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Add_kontragent.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add_kontragent.Designer.cs">
+      <DependentUpon>Add_kontragent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Conn_error.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Conn_error.Designer.cs">
+      <DependentUpon>Conn_error.cs</DependentUpon>
+    </Compile>
     <Compile Include="Deserialize.cs" />
     <Compile Include="detail.cs">
       <SubType>Form</SubType>
@@ -61,13 +107,38 @@
     <Compile Include="detail.Designer.cs">
       <DependentUpon>detail.cs</DependentUpon>
     </Compile>
+    <Compile Include="Edit_kontakts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_kontakts.Designer.cs">
+      <DependentUpon>Edit_kontakts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Edit_kontragents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Edit_kontragents.Designer.cs">
+      <DependentUpon>Edit_kontragents.cs</DependentUpon>
+    </Compile>
     <Compile Include="http_request.cs" />
+    <Compile Include="Kontacts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kontacts.Designer.cs">
+      <DependentUpon>Kontacts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Kontragents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Kontragents.Designer.cs">
+      <DependentUpon>Kontragents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login_Form.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login_Form.Designer.cs">
       <DependentUpon>Login_Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Macros.cs" />
     <Compile Include="Main_window.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,8 +147,50 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Testing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Testing.Designer.cs">
+      <DependentUpon>Testing.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Testing_obj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Testing_obj.Designer.cs">
+      <DependentUpon>Testing_obj.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Activation_Form.resx">
+      <DependentUpon>Activation_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_alarm.resx">
+      <DependentUpon>Add_alarm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="add_alarm_full.resx">
+      <DependentUpon>add_alarm_full.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_kontakt.resx">
+      <DependentUpon>Add_kontakt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Add_kontragent.resx">
+      <DependentUpon>Add_kontragent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Conn_error.resx">
+      <DependentUpon>Conn_error.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="detail.resx">
       <DependentUpon>detail.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_kontakts.resx">
+      <DependentUpon>Edit_kontakts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Edit_kontragents.resx">
+      <DependentUpon>Edit_kontragents.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kontacts.resx">
+      <DependentUpon>Kontacts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kontragents.resx">
+      <DependentUpon>Kontragents.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login_Form.resx">
       <DependentUpon>Login_Form.cs</DependentUpon>
@@ -85,6 +198,7 @@
     <EmbeddedResource Include="Main_window.resx">
       <DependentUpon>Main_window.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -94,7 +208,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Testing.resx">
+      <DependentUpon>Testing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Testing_obj.resx">
+      <DependentUpon>Testing_obj.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Main_window.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
