--- a/Disp_WinForm/App.config
+++ b/Disp_WinForm/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Disp_WinForm.Properties.Settings.btkConnectionString"
+            connectionString="User Id=lozik;Password=lozik;Host=10.44.30.32;Database=btk"
+            providerName="Devart.Data.MySql" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
