--- a/Disp_WinForm/packages.config
+++ b/Disp_WinForm/packages.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DocumentFormat.OpenXml" version="2.11.0" targetFramework="net452" requireReinstallation="true" />
-  <package id="Geckofx60.64" version="60.0.52" targetFramework="net452" />
+  <package id="DocumentFormat.OpenXml" version="2.12.1" targetFramework="net48" />
+  <package id="Geckofx60.64" version="60.0.54" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Memory" version="4.5.4" targetFramework="net452" requireReinstallation="true" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net452" requireReinstallation="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net452" requireReinstallation="true" />
   <package id="ZXing.Net" version="0.16.5" targetFramework="net452" requireReinstallation="true" />
 </packages>
